# Snake

./: .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  index.html  nginx.conf  pyproject.toml  snake_game.py
app/: __init__.py  cli.py  cluster.py  data.py  dr.py  io_utils.py  metrics.py  state.py  ui.py  viz.py
results/: clustering_pipeline_config_20251016_140544.json  clustering_pipeline_config_20251016_140544.yaml  clustering_pipeline_config_20251016_140624.json  clustering_pipeline_config_20251016_140624.yaml  clustering_pipeline_config_20251016_140717.json  clustering_pipeline_config_20251016_140717.yaml  clustering_pipeline_config_20251016_140746.json  clustering_pipeline_config_20251016_140746.yaml  clustering_pipeline_config_20251016_141558.json  clustering_pipeline_config_20251016_141558.yaml  clustering_pipeline_metrics_20251016_140717.json  clustering_pipeline_metrics_20251016_140746.json  clustering_pipeline_metrics_20251016_141558.json
tests/: __init__.py  test_cluster.py  test_data.py
